@@ -1,3 +1,7 @@
+2013-02-06  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Add translation view helper with formal/informal salutation option
+
 2012-12-15  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Add captcha validator class
